<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">reminder</string>
    
    
    <string name="description_logo">Reminder</string>
    
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="description_done">Done</string>
    
    <string name="done">Done</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_details">Details</string>
    <string name="title_remind_me">Remind Me</string>
    <string name="title_maps">Maps</string>
    <string name="title_feature1">Reminders</string>
    <string name="title_feature2">Map</string>
    <string name="title_feature3">Notifications</string>
    <string name="title_feature4">Settings</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>
    
    <string name="new_task_hint">Insert a new task...</string>
    <string name="edit_task_hint">Edit a task...</string>
    <string name="notes">Notes</string>
    <string name="remind_me">Remind Me</string>
    <string name="priority">Priority</string>
    
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="currentLocation">Current Location</string>
    <string name="whenLeave">When I Leave</string>
    <string name="whenArrive">When I Arrive</string>

    <string name="about_intro">Reminders is an app to help keep things organized throughout the day. For example, location-based Reminders can help you remember to call someone or do the laundry when you get to a specific location.\n\nReminders will then start notifying you when you have arrived at, or left, the specified location. A handy feature for the busy smartphone user that’s always on the go.</string>
    <string name="search_intro">Content for the Search page goes here.</string>

</resources>