<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <Button
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_done"
            android:onClick="onClickDone"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/black" />
    </LinearLayout>

    <com.readystatesoftware.maps.TapControlledMapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:apiKey="0r1PtL0aDATqp6xrbQ37ZGyaUMqqDddSYeu94zw"
        android:clickable="true" />

</LinearLayout>