<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>
    <!--
     <TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/feature1_intro"
    />
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="5dp" >

        <EditText
            android:id="@+id/new_task"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_hint"
            android:paddingRight="40dp"
            android:singleLine="true"
            android:textSize="13sp"
            android:imeOptions="actionDone" />

        <ImageButton
            android:id="@+id/add"
            style="@style/TitleBarAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/description_search"
            android:onClick="onClickAdd"
            android:src="@drawable/title_search_alt" />
    </FrameLayout>

    <ListView
        android:id="@+id/task_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:background="#00000000"
        android:listSelector="@android:color/transparent" />

</LinearLayout>